deployments/kafka-manager/templates/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kafka-manager
  namespace: kafka
spec:
  selector:
    app: istio-ingressgateway # This is the default ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-manager
  namespace: kafka
spec:
  gateways:
    - kafka-manager
  hosts:
    - "*" # What inbound Host should be routed. (eg. 'research.bied.nl')
  http:
    - match:
        - uri:
            prefix: /
      route:
        # routes it toward this host. Usually a Kubernetes native 'Service', this should be a FQDN in production
        - destination:
            host: kafka-manager
            port:
              number: 9000
